# xmrCircles

./: README.md  package-lock.json  package.json  spec.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: arti.rs  circles.rs  lib.rs  main.rs  pgp.rs
src-tauri/src/arti/: arti_axum.rs  tor_server.rs
