[package]
name = "xmr-circles"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "xmr_circles_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-stronghold = "2"
tauri-plugin-store = "2"
axum = "0.8.1"
futures-util = "0.3.31"
hyper = "1.6.0"
hyper-util = "0.1.10"
pin-project-lite = "0.2.16"
tokio = "1.43.0"
tor-cell = "0.27.0"
tor-hsservice = "0.27.0"
tor-proto = { version = "0.27.0", features = ["hs-service", "tokio"] }
tower-service = "0.3.3"
tracing = "0.1.41"
arti-client = {version= "0.27.0", features = ["tokio", "onion-service-service"] }


[dev-dependencies]
tokio = {version= "1.43.0", features = ["macros", "rt-multi-thread"] }
